internal-api-service-1/internal-api-1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-api-service-1
  labels:
    app: internal-api-service-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: internal-api-service-1
  template:
    metadata:
      labels:
        app: internal-api-service-1
    spec:
      containers:
      - name: internal-api-service-1
        image: neeranuchj/kubernetes-zerotrust:internal-api-service-1
        ports:
        - containerPort: 5001
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "250Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: internal-api-service-1
spec:
  selector:
    app: internal-api-service-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
  type: ClusterIP
