internal-api-service-1/internal-api-1-security.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: internal-api-1-authn
spec:
  selector:
    matchLabels:
      app: internal-api-service-1
  jwtRules:
  - issuer: "https://keycloak.neeranuchj.org/realms/kubernetes-zerotrust"
    jwksUri: "https://keycloak.neeranuchj.org/realms/kubernetes-zerotrust/protocol/openid-connect/certs"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: internal-api-1-authz
spec:
  selector:
    matchLabels:
      app: internal-api-service-1
  action: ALLOW
  rules:
  - when:
    - key: request.auth.claims[realm_access][roles]
      values:
      - "user"
      - "admin"
